# isp_optimizer

./: .gitignore  .gitmodules  README.md  app_launcher.py  app_launcher_pascalraw.py  app_launcher_rawdataset.py  app_optimizer_launcher.py  class_diagram.drawio  isp_configuration.json  isp_configuration_pascalraw.json  isp_configuration_rawdataset.json  isp_tuner.json  isp_tuner_set1.json  isp_tuner_set2.json  main.py  plots.ipynb
configs/: CMAOpt_tuning.yaml  cv_tuning.yaml  default_tuning.yaml  main_config.yaml  main_config_notebook.yaml  main_config_rawDataset.yaml  main_config_vocDataset.yaml  tuning_vocDataset.yaml
dataset/: dataset.py  utils.py
detector/: detector.py  utils.py
docs/: project_architecture.drawio
optimizer/: optimizer.py  utils.py
results/: quantitative_results.ipynb  results_01.json  results_02.json  results_03.json  results_04.json  results_05.json  results_06.json  results_07.json  results_2023_motorbike.json  results_2300_cars.json
src/HDR-ISP/: CMakeLists.txt  hdr_isp_node.cpp
src/HDR-ISP/cfgs/: isp_config_cannon copy.json  isp_config_cannon.json
src/isp_optimizer/: package.xml  setup.cfg  setup.py
src/isp_optimizer/data_loader/: data_loader.py
src/isp_optimizer/isp_optimizer/: cma_es_optimizer_node.py  cv_metrics_node.py  data_loader_node.py  utils.py  (+2 more)
src/isp_optimizer_interfaces/: CMakeLists.txt  package.xml
src/isp_optimizer_interfaces/msg/: BoundingBox.msg  ComputerVisionMetrics.msg  Inference.msg  ListBoundingBox.msg
src/isp_optimizer_interfaces/srv/: GetMetricResults.srv  RunEvaluation.srv  RunInference.srv
